<resources>
    <string name="app_name">AIC Mobile</string>

    <!--Content Projects Card-->
    <string name="project_content_title">Projects</string>
    <string name="project_content_active_count">%1$d open projects</string>
    <string name="project_content_complete_count">%1$d complete projects</string>

    <!--Content RFQ Card-->
    <string name="rfq_content_title">RFQs</string>
    <string name="rfq_content_incomplete_count">%1$d open RFQs</string>
    <string name="rfq_add_new_button">Add New</string>

    <!--Content Time Entry Card-->
    <string name="time_entry_content_title">Time Entry</string>
    <string name="time_entry_day_label">Monday</string>
    <string name="time_entry_hours_total">Week Total: %1$f</string>
    <string name="time_entry_add_new_button">Add New</string>

    <!--Add New RFQ Activity-->
    <string name="rfq_add_customer_label">Select Customer</string>
    <string name="rfq_add_description_label">Project Description</string>
    <string name="rfq_add_description_hint">Enter Description</string>
    <string name="rfq_add_customer_contact_label">Customer Contact</string>
    <string name="rfq_add_customer_contact_hint">Enter Customer Contact</string>
    <string name="rfq_add_rfq_due_date_label">Enter RFQ Due Date</string>
    <string name="rfq_add_rfq_due_date_button">Set Date</string>
    <string name="rfq_add_submit_button">Create RFQ</string>

    <!--Date Picker Fragment-->
    <string name="date_picker_title">RFQ Due Date</string>

    <!--Time Entry Activity-->
    <string name="time_entry_week_label">April 30 - May 6, 2017</string>

    <!--Project List Fragment-->
    <string name="project_list_search">Search</string>

    <!--Time Entry List Item-->
    <string name="time_entry_job_detail">1987 - Abbott - Test</string>
    <string name="time_entry_job_hours">4</string>

    <!--Time Entry Fragment-->
    <string name="time_entry_week_total_label">Week Total</string>
    <string name="time_entry_week_total">Total: %1$s</string>
    <string name="time_entry_submit_button">Submit Time</string>

    <!--Time Entry Dialog-->
    <string name="time_entry_dialog_submit">Submit</string>
    <string name="time_entry_dialog_loading_projects_label">Loading Projects</string>
    <string name="time_entry_dialog_loading_deliverables_label">Loading Deliverables</string>
    <string name="time_entry_dialog_loading_role_label">Loading Roles</string>
    <string name="time_entry_dialog_project_label">Select Project:</string>
    <string name="time_entry_dialog_project_select">Select Project</string>
    <string name="time_entry_dialog_header">Add New Time Entry</string>
    <string name="time_entry_dialog_deliverable_label">Select Deliverable:</string>
    <string name="time_entry_dialog_role_label">Select Role:</string>
    <string name="time_entry_dialog_date_label">Select Date:</string>
    <string name="time_entry_dialog_date_select">Monday, May 5</string>
    <string name="time_entry_dialog_hours_label">Enter time:</string>
    <string name="time_entry_dialog_hours_select">0.0</string>
    <string name="time_entry_dialog_note_label">Enter note:</string>
    <string name="time_entry_dialog_note_text">Enter note</string>

    <!--Login Activity-->
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <!--<string name="default_web_client_id">AIzaSyC9qVIEhWrucdjvrb_bQpodjYY416UafrI</string>-->
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <!--Project List Item-->
    <string name="project_list_customer">Abbott</string>
    <string name="project_list_description">Tanks</string>
    <string name="project_list_number">1754</string>
    <string name="project_budget">$%1$s</string>
    <string name="project_burn">$%1$s</string>
    <string name="project_burn_percent">%1$s%%</string>

    <!--Project Detail Activity-->
    <string name="title_activity_project_detail">ProjectDetailActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>
