<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="com.aic.android.aicmobile.RFQAddActivity">

    <TextView
        android:id="@+id/rfq_add_customer_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/rfq_add_customer_label"/>

    <Spinner
        android:id="@+id/rfq_add_customer_dropdown"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/rfq_add_customer_label"
        android:spinnerMode="dialog"/>

    <TextView
        android:id="@+id/rfq_add_description_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rfq_add_customer_dropdown"
        android:text="@string/rfq_add_description_label"
        android:labelFor="@+id/rfq_add_edit_description"/>

    <EditText
        android:id="@+id/rfq_add_edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rfq_add_description_label"
        android:hint="@string/rfq_add_description_hint"/>

    <TextView
        android:id="@+id/rfq_add_customer_contact_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rfq_add_edit_description"
        android:text="@string/rfq_add_customer_contact_label"
        android:labelFor="@+id/rfq_add_edit_customer_contact"/>

    <AutoCompleteTextView
        android:id="@+id/rfq_add_edit_customer_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rfq_add_customer_contact_label"
        android:hint="@string/rfq_add_customer_contact_hint"/>

    <!--<TextView-->
        <!--android:id="@+id/rfq_add_due_date_label"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="16dp"-->
        <!--android:layout_below="@+id/rfq_add_edit_customer_contact"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:text="@string/rfq_add_rfq_due_date_label"/>-->

    <!--<Button-->
        <!--android:id="@+id/rfq_add_due_date_button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/rfq_add_due_date_label"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:text="@string/rfq_add_rfq_due_date_button"-->
        <!--style="@style/Widget.AppCompat.Button"/>-->

    <Button
        android:id="@+id/rfq_add_submit_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/rfq_add_submit_button" />




</RelativeLayout>
