<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/time_entry_week_total_card_view">

        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                layout="@layout/content_time_entry_card"
                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="0dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="4dp"
                android:id="@+id/time_entry_sunday_card"/>

            <include
                layout="@layout/content_time_entry_card"
                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="0dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="4dp"
                android:id="@+id/time_entry_monday_card"/>

            <include
                layout="@layout/content_time_entry_card"
                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="0dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="4dp"
                android:id="@+id/time_entry_tuesday_card"/>

            <include
                layout="@layout/content_time_entry_card"
                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="0dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="4dp"
                android:id="@+id/time_entry_wednesday_card"/>

            <include
                layout="@layout/content_time_entry_card"
                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="0dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="4dp"
                android:id="@+id/time_entry_thursday_card"/>

            <include
                layout="@layout/content_time_entry_card"
                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="0dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="4dp"
                android:id="@+id/time_entry_friday_card"/>

            <include
                layout="@layout/content_time_entry_card"
                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="0dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="4dp"
                android:id="@+id/time_entry_saturday_card"/>

        </LinearLayout>
    </ScrollView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/time_entry_week_total_card_view">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <LinearLayout
                android:id="@+id/time_entry_week_total_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_entry_week_total_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button" />

                <TextView
                    android:id="@+id/time_entry_week_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/time_entry_week_total"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            </LinearLayout>

            <Button
                android:id="@+id/time_entry_submit_week_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:text="@string/time_entry_submit_button" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>